@@ -1,2 +1,3 @@
 include *.txt
 recursive-include conf *.conf
+recursive-include plugins *.py
