@@ -1,0 +1,22 @@
+# SNMP Forwarder logger plugin configuration
+[general]
+method: file
+# method: syslog
+
+[file]
+destination: /tmp/snmpfwd-acct.log
+# time-based file rotation
+rotation: timed
+backupcount: 30
+timescale: D
+interval: 1
+
+[syslog]
+facility: LOCAL1
+priority: INFO
+transport: udp
+
+[content]
+#pdus: GetRequest GetNextRequest SetRequest GetBulkRequest Response
+pdus: Response
+format: %(asctime)s %(snmp-peer-address)s %(snmp-pdu-type)s %(snmp-var-binds)s
