@@ -1,0 +1,4 @@
+# rewrite sysDescr.0
+^1\.3\.6\.1\.2\.1\.1\.1\.0$ not shown
+# nullify all OIDs in branch
+^1\.3\.6\.1\.2\.1\.1.*$
