@@ -66,6 +66,10 @@
 # snmp-bind-address-pattern-list      true if SNMP Manager is sending packets
 #                                     to a transport endpoint that matches
 #                                     at least one of these regexps
+# plugin-modules-path-list            plugin modules search path
+# plugin-module                       plugin file name (without .py)
+# plugin-options                      plugin module configuration options
+# plugin-id                           plugin module ID
 # trunk-id                            trunk ID
 # trunk-bind-address                  trunk connection local endpoint
 # trunk-peer-address                  trunk connection peer address
@@ -80,6 +84,9 @@
 #                                     credentials from this list
 # matching-snmp-peer-id-list          true if incoming SNMP message is sent
 #                                     by a SNMP Manager from this list
+# using-plugin-id-list                Funnel SNMP message though each of listed
+#                                     plugin modules
+#                                     through trunk(s) in this list
 # using-trunk-id-list                 Pass SNMP message to Forwarder Manager(s)
 #                                     through trunk(s) in this list
 #
@@ -97,7 +104,12 @@
 #    connections. Each trunk is identified by a trunk-id which is used
 #    for message routing. Trunk initiator is responsible for trunk ID
 #    definition.
-# 5) Configure message routing in form of matching-snmp-credentials-id-list,
+# 5) Optionally configure plugins. These are small Python code snippets
+#    capable to access/modify/block passing SNMP message. You should
+#    configure each module you intend to use (giving search path, module
+#    file name, options) and assign it an ID. Then yuo could list these
+#    IDs in the routing section (see below)
+# 6) Configure message routing in form of matching-snmp-credentials-id-list,
 #    matching-snmp-peer-id-list and matching-snmp-context-id-list options
 #    mapped to the contents of using-trunk-id-list. The latter identifies 
 #    Manager part(s) of SNMP Forwarder to pass received SNMP message over.
@@ -249,6 +261,24 @@ peers-group {
   }
 }
 
+plugin-group {
+  plugin-1 {
+    plugin-module: rewrite
+    plugin-options: config=/etc/snmpfwd/plugins/rewrite.conf
+
+# disabled
+#    plugin-id: rewrite
+  }
+
+  plugin-2 {
+    plugin-module: logger
+    plugin-options: config=/etc/snmpfwd/plugins/logger.conf
+
+# disabled
+#    plugin-id: logger
+  }
+}
+
 trunking-group {
   trunk-crypto-key: 1234567890
 
@@ -297,6 +327,8 @@ routing-map {
   route-4 {
     matching-snmp-credentials-id-list: config-at-secondary-interace
     matching-snmp-peer-id-list: 101
+# plugins disabled
+#    using-plugin-id-list: logger rewrite
     using-trunk-id-list: clienttrunk
   }
 }
