@@ -1,7 +1,8 @@
 0.0.2rc1 (released 14-02-2015)
 ------------------------------
 
-- Experimental SNMP PDU var-binds logging added
+- Loadable extention plugin modules infrastructure first introduced.
+- Experimental SNMP PDU var-binds logging added.
 
 0.0.2rc0 (released 21-01-2015)
 ------------------------------
